[package]
name = "proxy_tests"
version = "0.0.1"
edition = "2018"
publish = false

[[test]]
name = "proxy"
path = "proxy/mod.rs"
required-features = ["failpoints", "testexport"]

[features]
default = ["failpoints", "testexport", "test-engine-kv-rocksdb"]
failpoints = ["fail/failpoints", "tikv/failpoints"]
# cloud-aws = ["encryption_export/cloud-aws"]
# cloud-gcp = ["encryption_export/cloud-gcp"]
# cloud-azure = ["encryption_export/cloud-azure"]
testexport = ["raftstore/testexport", "raftstore-v2/testexport", "tikv/testexport", "engine_tiflash/testexport", "engine_store_ffi/testexport"]
profiling = ["profiler/profiling"]

test-engine-kv-rocksdb = [
  "raftstore/test-engine-kv-rocksdb",
  "mock-engine-store/test-engine-kv-rocksdb"
]
test-engine-raft-raft-engine = [
  "raftstore/test-engine-raft-raft-engine",
  "mock-engine-store/test-engine-raft-raft-engine"
]
test-engines-rocksdb = [
  "raftstore/test-engines-rocksdb",
  "mock-engine-store/test-engines-rocksdb"
]
test-engines-panic = [
  "raftstore/test-engines-panic",
  "mock-engine-store/test-engines-panic"
]
test-engine-raft-rocksdb = [
  "engine_test/test-engine-raft-rocksdb"
]

jemalloc = ["tikv/jemalloc", "proxy_server/jemalloc", "proxy_ffi/jemalloc"]
mimalloc = ["tikv/mimalloc"]
snmalloc = ["tikv/snmalloc"]
mem-profiling = ["tikv/mem-profiling"]
sse = ["tikv/sse"]
portable = ["tikv/portable"]
openssl-vendored = ["tikv/openssl-vendored"]
enable-pagestorage = []
external-jemalloc = ["proxy_server/external-jemalloc", "engine_store_ffi/external-jemalloc"]

[dependencies]
api_version = { workspace = true }
async-trait = "0.1"
batch-system = { workspace = true }
cdc = { workspace = true }
clap = "2.32"
collections = { workspace = true }
crc64fast = "0.1"
crossbeam = "0.8"
encryption = { workspace = true }
encryption_export = { workspace = true }
engine_rocks_helper = { workspace = true }
engine_store_ffi = { workspace = true, default-features = false }
engine_test = { workspace = true, default-features = false }
engine_tiflash = { workspace = true, default-features = false }
error_code = { workspace = true }
fail = "0.5"
file_system = { workspace = true }
futures = "0.3"
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
grpcio-health = { version = "0.10", default-features = false }
kvproto = { workspace = true }
libc = "0.2"
log_wrappers = { workspace = true }
mock-engine-store = { workspace = true, default-features = false }
more-asserts = "0.2"
online_config = { workspace = true }
paste = "1.0"
pd_client = { workspace = true }
protobuf = { version = "2.8", features = ["bytes"] }
proxy_ffi = { workspace = true, default-features = false }
proxy_server = { workspace = true, default-features = false }
# proxy_test_raftstore_v2 = { workspace = true }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raft_log_engine = { workspace = true }
raftstore = { workspace = true }
raftstore-v2 = { workspace = true }
rand = "0.8.3"
serde = "1.0"
serde_derive = "1.0"
slog = { workspace = true }
slog-global = { workspace = true }
tempfile = "3.0"
tidb_query_aggr = { workspace = true }
tidb_query_common = { workspace = true }
tidb_query_datatype = { workspace = true }
tidb_query_executors = { workspace = true }
tidb_query_expr = { workspace = true }
tikv = { workspace = true }
tikv_util = { workspace = true }
time = "0.1"
tipb = { git = "https://github.com/pingcap/tipb.git" }
toml = "0.5"
txn_types = { workspace = true }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229b2c1fcc44118bef7eff127128" }

[dev-dependencies]
arrow = "13.0"
byteorder = "1.2"
# See https://bheisler.github.io/criterion.rs/book/user_guide/known_limitations.html for the usage
# of `real_blackbox` feature.
causal_ts = { workspace = true }
concurrency_manager = { workspace = true }
criterion = "0.3"
criterion-cpu-time = "0.1"
engine_rocks = { workspace = true }
engine_test = { workspace = true }
engine_traits = { workspace = true }
file_system = { workspace = true }
hex = "0.4"
hyper = { version = "0.14", default-features = false, features = ["runtime"] }
keys = { workspace = true }
panic_hook = { workspace = true }
profiler = { workspace = true }
rand_xorshift = "0.3"
resource_metering = { workspace = true }
security = { workspace = true }
serde_json = "1.0"
sst_importer = { workspace = true }
test_backup = { workspace = true }
test_coprocessor = { workspace = true }
test_pd = { workspace = true }
test_pd_client = { workspace = true }
test_raftstore = { workspace = true }
test_raftstore-v2 = { workspace = true }
test_sst_importer = { workspace = true }
test_storage = { workspace = true }
test_util = { workspace = true }
tidb_query_datatype = { workspace = true }
tipb_helper = { workspace = true }
tokio = { version = "1.5", features = ["rt-multi-thread"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
criterion-perf-events = "0.1"
perfcnt = "0.7"
