[package]
name = "tikv-compactor"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
file_system = { path = "../../components/file_system" }
hyper = { version = "0.14", features = ["full"] }
kvengine = { path = "../../components/kvengine" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = "0.1"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-term = "2.4"
tokio = { version = "1.12", features = ["full"] }
toml = "0.5"
