[package]
name = "api_version"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
bitflags = "1.0.1"
codec = { path = "../codec", default-features = false }
kvproto = { git = "https://github.com/SpadeA-Tang/kvproto.git" }
thiserror = "1.0"
tikv_util = { path = "../tikv_util", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
match_template = { path = "../match_template" }
tikv_alloc = { path = "../tikv_alloc" }
txn_types = { path = "../txn_types", default-features = false }

[dev-dependencies]
panic_hook = { path = "../panic_hook" }
