[package]
name = "api_version"
version = "0.1.0"
edition = "2018"
publish = false

[features]
testexport = []

[dependencies]
bitflags = "1.0.1"
codec = { path = "../codec", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
match_template = { path = "../match_template" }
thiserror = "1.0"
tikv_alloc = { path = "../tikv_alloc" }
tikv_util = { path = "../tikv_util", default-features = false }
txn_types = { path = "../txn_types", default-features = false }

[dev-dependencies]
panic_hook = { path = "../panic_hook" }
